Kubernetes/03-os_minio/01-os_minio-k8.yaml
---
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: os
  namespace: dt
spec:
  selector:
    matchLabels:
      app: os
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: os
    spec:
      containers:
      - name: os
        image: minio/minio:latest
        args:
        - server
        - --console-address
        - :9001
        - /data
        ports:
        - containerPort: 9000
        - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
    name: os-svc
    namespace: dt
spec:
    ports:
      - name: os
        port: 9000
        targetPort: 9000
    selector:
        app: os
    type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
    name: osc-svc
    namespace: dt
spec:
    ports:
      - name: osc
        port: 9001
        targetPort: 9001
    selector:
        app: os
    type: LoadBalancer
