Kubernetes/03-os_minio/02-os_minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: os-ingress
  namespace: dt
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 #$2
    nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/upstream-vhost: 10.1.1.250:9000
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"

spec:
  rules:
#  - host: localhost
   - http:
      paths:
      - path: /os(.*) #(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: os-svc
            port:
              number: 9000
